fix header logo sizing to prevent truncation

--- a/src/less/Header.less
+++ b/src/less/Header.less
@@ -41,7 +41,7 @@
 }
 
 /* Medium screens */
-@media only screen and (min-width: 40.063em) and (max-width: 64em) {
+@media only screen and (min-width: 767px) and (max-width: 1042px) {
     #logo img {
         height: 30px;
     }
